# FibonachiRisc0

./: .env.example  .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json  profile.pb
apps/: Cargo.toml
apps/src/: main.rs
apps/src/utils/: GeneratingProof.rs  generating_proof.rs  generating_receipt.rs  lib.rs  mod.rs  receipt_interface.rs
contracts/: FibonachiVerifier.sol
contracts/scripts/: deployFibonachiVerifier.ts
contracts/src/: FibonachiVerifier.sol
contracts/src/Risczero/: RisczeroVerifierRouter.sol
hardhat/: .env.example  hardhat.config.ts  package-lock.json  package.json
hardhat/artifacts/contracts/FibonachiVerifier.sol/: FibonachiVerifier.dbg.json  FibonachiVerifier.json
hardhat/artifacts/contracts/Risczero/IRisczeroVerifier.sol/: IRiscZeroVerifier.json  OutputLib.json  ReceiptClaimLib.json  SystemStateLib.dbg.json  SystemStateLib.json
hardhat/cache/: solidity-files-cache.json
hardhat/contracts/: EventNumber.sol  FibonachiVerifier.sol  IFibonachiVerifier.sol
hardhat/contracts/Risczero/: IRisczeroVerifierRouter.sol  RisczeroVerifierRouter.sol
hardhat/contracts/students/: FibonachiChallenge.sol
hardhat/contracts/teachers/: FibonachiVerifier.sol
hardhat/scripts/: deployFibonachiVerifier.ts
hardhat/test/: Elf.sol  test.cjs
hardhat/typechain-types/: FibonachiVerifier.ts  ImageID.ts  hardhat.d.ts  index.ts
hardhat/typechain-types/Risczero/: index.ts
hardhat/typechain-types/Risczero/IRisczeroVerifier.sol/: IRiscZeroVerifier.ts  index.ts
hardhat/typechain-types/factories/: FibonachiVerifier__factory.ts  ImageID__factory.ts  index.ts
hardhat/typechain-types/factories/Risczero/: index.ts
hardhat/typechain-types/factories/Risczero/IRisczeroVerifier.sol/: IRiscZeroVerifier__factory.ts  index.ts
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
