[workspace]
resolver = "2"
members = ["apps", "methods","host"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
risc0-build = { version = "1.1", features = ["docker"] }
risc0-build-ethereum = { version = "1.1" }

# risc0 monorepo dependencies.
risc0-ethereum-contracts = { version = "1.1"}
risc0-zkvm = { version = "1.1", default-features = false }
risc0-zkp = { version = "1.1", default-features = false }

methods = { path = "./methods" }
anyhow = { version = "1.0.92" }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.41.0"}
rand = "0.8"  # or the latest version

[profile.release]
debug = 1
lto = true
