[workspace]
resolver = "2"
members = ["apps", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
risc0-build = { version = "1.1", features = ["docker"] }
risc0-build-ethereum = { version = "1.1" }

risc0-ethereum-contracts = { version = "1.1"}
risc0-zkvm = { version = "1.1" }
risc0-zkp = { version = "1.1" }

methods = { path = "./methods" }
anyhow = { version = "1.0.92" }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
sha2 = { version = "0.10"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

[profile.release]
debug = 1
lto = true
