[workspace]
resolver = "2"
members = ["apps", "methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
risc0-build = { version = "1.1", features = ["docker"] }
risc0-build-ethereum = { version = "1.1" }

risc0-ethereum-contracts = { version = "1.1"}
risc0-zkvm = { version = "1.1" }
risc0-zkp = { version = "1.1" }

alloy = { version = "0.6", features = ["full"] }
alloy-primitives = { version = "=0.8.12", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.12" }
bincode = { version = "1.3" }

methods = { path = "./methods" }
anyhow = { version = "1.0.92" }
hex = { version = "0.4" }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = { version = "1.0.215" }
serde_json = { version = "1.0.133" }
sha2 = { version = "0.10"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
url = { version = "2.5" }


[profile.release]
debug = 1
lto = true
