[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "normal"
path = "src/bin/normal_publisher.rs"

[[bin]]
name = "teacher"
path = "src/bin/teacher_publisher.rs"


[dependencies]
risc0-zkvm = { workspace = true}
risc0-ethereum-contracts = { workspace = true}
bonsai-sdk = "1.1.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
methods = { workspace = true }
ethers = { version = "2.0.14" }
dotenv = "0.15"
tokio = { workspace = true } 
serde = { workspace = true}
serde_derive = { workspace = true }
sha2 = {workspace = true}
anyhow = {workspace = true}
hex = {workspace = true}

