[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "normal"
path = "src/bin/normal_publisher.rs"

[[bin]]
name = "test"
path = "src/bin/test_compute_fibo.rs"


[dependencies]
risc0-zkvm = { workspace = true}
risc0-ethereum-contracts = { workspace = true}
bonsai-sdk = "1.1.3"

alloy = { workspace = true }
alloy-primitives ={ workspace = true }
alloy-sol-types = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
url = { workspace = true }
env_logger = { version = "0.11.5" }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
methods = { workspace = true }
ethers = { version = "2.0.14" }
dotenv = "0.15"
tokio = { workspace = true } 
serde = { workspace = true}
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha2 = {workspace = true}
anyhow = {workspace = true}
hex = {workspace = true}



