[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
fibonachi-methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true}
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
serde = { workspace = true }