[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finalize_fibonachi"
path = "src/bin/fibonachi.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
serde = "1.0.214"

[profile.release]
lto = "thin"
debug = true