[package]
name = "guest"
version = "0.1.0"
edition = "2021"

#  Declare ELF & ID here accoring to embed method in build logic definition
[[bin]]
name = "finalize_fibonachi"
path = "src/bin/fibonachi_v2.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
serde = "1.0.214"

[profile.release]
lto = "thin"
debug = true