[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finalize_fibonachi"
path = "src/bin/fibonachi_v2.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "=0.8.12", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.12" }
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = { version = "1.0.215" }
serde_json = { version = "1.0.133" }

[profile.release]
lto = "thin"
debug = true